@@ -36,10 +36,6 @@
     <!-- Once full testing is added this should either be removed or increased -->
     <jacoco.min.linecoverage>0.10</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.10</jacoco.min.branchcoverage>
-    <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
-    <javaModulesSurefireArgLine>
-      --add-opens com.azure.messaging.webpubsub/com.azure.messaging.webpubsub=ALL-UNNAMED
-    </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
@@ -63,7 +59,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-test</artifactId>
-      <version>1.10.0</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
+      <version>1.11.0-beta.1</version> <!-- {x-version-update;unreleased_com.azure:azure-core-test;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -93,7 +89,7 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
-      <version>3.4.19</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
+      <version>3.4.21</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -116,16 +112,16 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.glassfish.tyrus.bundles</groupId>
-      <artifactId>tyrus-standalone-client</artifactId>
-      <version>1.16</version>  <!-- {x-version-update;org.glassfish.tyrus.bundles:tyrus-standalone-client;external_dependency} -->
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.glassfish.tyrus</groupId>
-      <artifactId>tyrus-container-grizzly</artifactId>
-      <version>1.2.1</version>  <!-- {x-version-update;org.glassfish.tyrus:tyrus-container-grizzly;external_dependency} -->
+      <artifactId>tyrus-client</artifactId>
+      <version>1.16</version>  <!-- {x-version-update;org.glassfish.tyrus:tyrus-client;external_dependency} -->
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.websocket</groupId>
+          <artifactId>javax.websocket-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
